﻿Version [Version Number] ([Friendly Version Number]) [Release Date]


Version vNext
	General description:
		

	New features:
		-[Core] When a collection is registered using RegisterAll<T>(T[]), RegisterAll<T>(Type[]), 
		 RegisterAll<T>(IEnumerable<Type>) or RegisterAll(Type, IEnumerable<Type>), retrieving that instance
		 using the generic GetAllInstances<T>() will now return a collection that implements IList<T>. This
		 allows retrieving elements by index with an performance characteristic of O(1). Collections decorated
		 using the RegisterDecorator overloads will maintain this behavior. Note that this is not supported
		 when retrieving instances using GetAllInstances(Type). (work item 19575)
		-[Integration.Web.Mvc] SimpleInjectorMvcExtensions.GetControllerTypesToRegister method added. This
		 allows users to change the way MVC controllers are registered by default (using the
		 RegisterMvcControllers overload).
		-[Integration.Web.Forms] ASP.NET Web Forms integration added. (work item 19510)

	Bug fixes:
		-[Core] Registering a collection using RegisterAll<object>(Type[]) failed when one of the supplied
		 types was an interface incorrectly stating the the interface did not inherit from Object. 
		 (work item 19577)
		-[Core] The RegisterAll<TService>(TService[]) overload that takes in an array of singleton instances,
		 did not let those instances go through the pipeline as would happen when registering a singleton
		 instance using Register<TService>(TService). With the latter method properties and possible other
		 transformations would be applied, while the former only called the initializer delegates.
		 (work item 19576)
		-[Core] Verify only checked the original registration of collections and not whether the final
		 collection (that could be intercepted and decorated) worked as expected. (work item 19596)


Version v2.2.0 (v2.2 RTM)
	General description: