@@ -8,12 +8,7 @@
         {
             var container = new Container();
 
-#if !SILVERLIGHT
-            // This will flag the container as 'first', which does another compilation step which is important
-            // to test.
-            var id = typeof(Container).GetField("containerId", BindingFlags.Instance | BindingFlags.NonPublic);
-            id.SetValue(container, 1);
-#endif
+            container.Options.EnableDynamicAssemblyCompilation = true;
 
             return container;
         }
